force-app/main/default/objects/custom_create141__c/custom_create141__c.object-meta.xml
<CustomObject>
    <label>Custom created object141</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects141</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>