force-app/main/default/objects/custom_create141__c/fields/custom_create_141field590__c.field-meta.xml
<CustomField>
    <fullName>custom_create_141field590__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 141field590</label>
    <type>Checkbox</type>
</CustomField>