force-app/main/default/objects/custom_create141__c/fields/custom_create_141field660__c.field-meta.xml
<CustomField>
    <fullName>custom_create_141field660__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 141field660</label>
    <type>Checkbox</type>
</CustomField>